Deploy-NetworkSecurityGroup.json
{
   "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
   "contentVersion": "1.0.0.0",
   "parameters": {
      "securityGroup": {
         "defaultValue": "NewGroupName",
         "type": "String",
         "metadata": {
            "description": "The name for the new security group"
         }
      }
   },
   "variables": {},
   "resources": [
      {
         "comments": "",
         "type": "Microsoft.Network/networkSecurityGroups",
         "name": "[parameters('securityGroup')]",
         "apiVersion": "2016-03-30",
         "location": "[resourceGroup().location]",
         "properties": {
            "securityRules": [
               {
                  "name": "RDP",
                  "properties": {
                     "description": "Allow RDP",
                     "protocol": "Tcp",
                     "sourcePortRange": "*",
                     "destinationPortRange": "3389",
                     "sourceAddressPrefix": "*",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 100,
                     "direction": "Inbound"
                  }
               },
               {
                  "name": "HTTP",
                  "properties": {
                     "description": "Allow HTTP",
                     "protocol": "Tcp",
                     "sourcePortRange": "*",
                     "destinationPortRange": "80",
                     "sourceAddressPrefix": "*",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 101,
                     "direction": "Inbound"
                  }
               }
            ]
         }
      }
   ]
}
